Fix Maven run unit tests of 'chapters' module