@@ -26,6 +26,8 @@ import org.junit.*;
 
 import java.util.*;
 
+// To run this test, add the following to the VM arguments:
+// --add-reads eu.javaspecialists.books.dynamicproxies=eu.javaspecialists.books.dynamicproxies.chapters
 public class FilterTest {
   @Test(expected = IllegalArgumentException.class)
   public void testBadFilter() {
